slight code cleanup made sure all the links worked cleaned up a bit of the code realized that i forgot to close the html tag :$

--- a/products.html
+++ b/products.html
@@ -168,8 +168,8 @@
 			<p class = "extra-content"> Content </p>
 			<p class = "extra-content"> Style Guide </p>
 		</section>
-
 	</body>
+</html>
 
 <script>
     window.addEventListener('load', function load() {
