--- a/purchase-item.html
+++ b/purchase-item.html
@@ -153,8 +153,8 @@
 				</div>		
 			</div>
 		</section>
-		
 	</body>
+	</html>
 
 	<script>
     window.addEventListener('load', function load() {
