--- a/view-item.html
+++ b/view-item.html
@@ -69,9 +69,9 @@
 			</div>
 			<nav>
 				<a class ="head-nav current" href = "products.html"> Products </a>
-				<a class ="head-nav" href = "#"> About </a>
-				<a class ="head-nav" href = "#"> Contact </a>
-				<a class ="head-nav" href = "#"> Events </a> 
+				<a class ="head-nav" href = "about.html"> About </a>
+				<a class ="head-nav" href = "contact.html"> Contact </a>
+				<a class ="head-nav" href = "events.html"> Events </a> 
 			</nav>
 		</header>
 		
@@ -81,8 +81,8 @@
 				<p class = "bc-break"> // </p>
 				<a href = "products.html" class = "bc-products">Products</a>
 				<p class = "bc-break"> // </p>
-				<a href = "#" class = "bc-products">Pop! Disney</a><p class = "bc-break"> // </p>
-				<a href = "#" class = "bc-current">Pop! Disney: Joy</a>
+				<a href = "funko-heroes.html" class = "bc-products">Pop! Disney</a><p class = "bc-break"> // </p>
+				<a href = "view-item.html" class = "bc-current">Pop! Disney: Joy</a>
 			</nav>
 			<section class = "view-item">
 				<div class = "item-picture">
@@ -150,7 +150,7 @@
 			<p class = "extra-content"> Style Guide </p>
 		</section>
 	</body>
-
+</html>
 
 
 <script>
