oops..back to original

--- a/view-item.html
+++ b/view-item.html
@@ -146,7 +146,7 @@
 		</div>
 
 		<div class = "extras">
-			<p><a class = "extra-content" href="reference.html">Content </a></p>
+			<p><a class = "extra-content">Content </a></p>
 			<p class = "extra-content"> Style Guide </p>
 		</section>
 	</body>
