--- a/products.html
+++ b/products.html
@@ -8,6 +8,21 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/product.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+		<script src="http://jqueryjs.googlecode.com/files/jquery-1.2.6.min.js" type="text/javascript"></script>
+
+
+<script>
+jQuery(document).ready(function($){
+
+	$('.multi-all').prepend('<div id="mobile-menu" class="nav-button">Categories</div>');
+
+	/* toggle nav */
+	$('#mobile-menu').click ( function() {
+		$('.product-nav').slideToggle();
+		$(this).toggleClass('active');
+	});
+});
+</script>
 
 	</head>	
 
@@ -25,7 +40,9 @@
 		</header>
 
 	<div class = "multi-all">
-		<section class = "product-nav">
+<!-- 		<div id="mobile-menu">
+			</div> -->
+		<section class="product-nav">			
 			<p>Pop! Figures</p>
 			<a href = "funko-heroes.html" class="nav-button"> Pop! Heroes </a>
 			<a href = "funko-heroes.html" class="nav-button"> Pop! Animation </a>
@@ -45,7 +62,7 @@
 			<nav class = "breadcrumbs">
 				<a href ="index.html" class= "bc-home">Home</a> 
 				<p class = "bc-break"> // </p>
-				<a href = "#" class = "bc-products bc-current">Products</a>
+				<a href = "#" class = "bc-home bc-current">Products</a>
 			</nav>
 			
 			<img class="category-banner" src = "img/Products/Funko/product-banner.png">
