--- a/about.html
+++ b/about.html
@@ -31,15 +31,15 @@
 		<section class = "banner">
 			<img src="img/About/about-banner.png" alt="A banner image that shows a picture of the Funko mascot in the head office">
 			<div class = "banner-header">
-				<p class = "banner-title"> About Us</p>
-				<p class = "banner-question"> Who Are We?</p>
+				<h1 class = "banner-title"> About Us</h1>
+				<h4 class = "banner-question"> Who Are We?</h4>
 			</div>
 		</section>
 	
 <!--ABOUT COMPANY-->
 		<section class ="about">	
 			<div class="grid">
-				<h6 class= "section-header">Our Company</h6>
+				<h2>Our Company</h2>
 				<div class="grid-col-half">
 			
 					<p class="history-text">Founded in 1998 by Mike Becker, the company was originally conceived by Becker as a small project to bring back various low-tech, nostalgia-themed toys in the high-tech world of today. Funko's first manufactured bobblehead was of the restaurant advertising icon Big Boy. Sold in 2005, Funko LLC is now headed by Brian Mariotti as president. Since 2005, the company has increased the scope of unique toy lines, and has signed licensing deals with WWE, Lucasfilm, Marvel, Hasbro, Elvis Presley, CBS, FOX, Warner Bros, Disney, Microsoft, HBO, etc. </p>
@@ -57,7 +57,7 @@
 <!--STAFF INTRO-->
 		<section class = "staff">
 			<div>
-			<h6 class= "section-header">Meet the Team</h6>
+			<h2>Meet the Team</h2>
 			</div>
 
 		<section class="meet-the-team">
