Code clean up, changed all of the headings from p classes to h1-h6 tags to clean up the css

--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
 		<section class = "banner">
 			<img src="img/Contact/contact-banner.png" alt="contact banner image that shows a bunch of funko boxes">
 			<div class = "banner-header">
-				<p class = "banner-title"> Contact</p>
-				<p class = "banner-question"> Where to Find?</p>
+				<h1> Contact</h1>
+				<h4> Where to Find?</h4>
 			</div>
 		</section>
 
@@ -41,7 +41,7 @@
 		<section class = "contact-details">
 			<!--MAP-->
 			<div class="contact">
-				<h6 class= "section-header">Funko Pop!</h6>
+				<h2>Funko Pop!</h2>
 				<div class="grid-col-one">
 
 					<img class="store-picture" src="img/Contact/store.png" alt="map">
