Fixed the company details on the contact page to be inline with each other instead of block

--- a/contact.html
+++ b/contact.html
@@ -49,15 +49,17 @@
 			
 				<!--STORE INFO-->
 
+				<div class = "store-info">	
 					<div class ="store-details">
-					<p class=" store-details store-text"><a class = "bold-color store-text">Location:</a> Vancouver Convention Center
+					<p><a class = "bold-color">Location:</a> Vancouver Convention Center
 					<br>1055 Canada Place, <br>Vancouver, BC <br>V6C 0C3</p>
 					</div>
 
 					<div class ="store-details">
-					<p class=" store-details store-text"><a class = "bold-color history-text">General:</a> vancouverstore@funkopop.com</p><p>604 123 4466</p>
+					<p><a class = "bold-color">General:</a> vancouver@funkopop.com</p><p>604 123 4466</p>
 					</div>
 				</div>
+			</div>
 		</section>
 			
 <!--FORM/CONTACT-->
