Fixing the event time details to be inline with each other

--- a/events.html
+++ b/events.html
@@ -38,15 +38,15 @@
 			<h6 class= "section-header">Upcoming Events</h6>
 			<div class= "events-all">
 				<div class="fan-expo  fan-expo-first">
-					<a href = "events1.html"><img src="img/Index/events-fanexpo.png" height ="170" width ="238" alt"Vancouver Fan expo picture"></a><h5>Vancouver Fan Expo</h5>
+					<a href = "events1.html"><img src="img/Index/events-fanexpo.jpg" height ="170" width ="238" alt"Vancouver Fan expo picture"></a><h5>Vancouver Fan Expo</h5>
 				</div>
 				
 				<div class="fan-expo fan-expo-mid">
-					<a href = "events1.html"><img src="img/Index/events-comiccon.png" height ="170" width ="238" alt"Vancouver Fan expo picture"></a><h5> San Diego Comic Con</h5>
+					<a href = "events1.html"><img src="img/Index/events-comiccon.jpg" height ="170" width ="238" alt"Vancouver Fan expo picture"></a><h5> San Diego Comic Con</h5>
 				</div>
 				
 				<div class="fan-expo fan-expo-last">
-					<a href = "events1.html"><img src="img/Index/events-toyfair.png" height ="170" width ="238" alt"Vancouver Fan expo picture"></a><h5> Ney York Toy Fair</h5>
+					<a href = "events1.html"><img src="img/Index/events-toyfair.jpg" height ="170" width ="238" alt"Vancouver Fan expo picture"></a><h5> Ney York Toy Fair</h5>
 				</div>
 				<div class="fan-expo  fan-expo-first">
 					<a href = "events1.html"><img src="img/Events/megacon.png" height ="170" width ="238" alt"Vancouver Fan expo picture"></a><h5> MegaCon</h5>
