--- a/events1.html
+++ b/events1.html
@@ -29,15 +29,15 @@
 		<section class = "banner">
 			<img src="img/Events/events1-banner.png" alt="banner that shows a Funko display at an event">
 			<div class = "banner-header">
-				<p class = "banner-title"> Van Fan Expo</p>
-				<p class = "banner-question"> What is that?</p>
+				<h1> Van Fan Expo</h1>
+				<h4> What is that?</h4>
 			</div>
 		</section>
 
 <!--EVENT IMG/DETAIL-->
 		<section class = "event-information">
 		<div class="grid">
-			<h6 class= "section-header">We're coming to the Vancouver Fan Expo!</h6>
+			<h2>We're coming to the Vancouver Fan Expo!</h2>
 
 
 			<div class="grid-col-one">
@@ -56,7 +56,7 @@
 				</div>
 
 					<div class ="event-details">
-					<p class=" event-details history-text"><a class = "bold-color history-text">Where:</a> Vancouver Convention Center
+					<p><a class = "bold-color">Location:</a> Vancouver Convention Center
 					<br>1055 Canada Place, <br>Vancouver, BC <br>V6C 0C3</p>
 					</div>
 			</div>
