--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 		<link rel="stylesheet" href="css/main.css">
 		
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+
+		<script src="http://jqueryjs.googlecode.com/files/jquery-1.2.6.min.js" type="text/javascript"></script>
+
+
+		<script>
+		jQuery(document).ready(function($){
+
+			$('header').append('<div id="mobile-menu">Menu</div>');
+
+			/* toggle nav */
+			$('#mobile-menu').click ( function() {
+				$('nav').slideToggle();
+				$(this).toggleClass('active');
+			});
+		});
+		</script>
+
 	</head>
 	
 	<body>
@@ -34,15 +51,21 @@
 			<h2>Offers</h2>
 			
 			<div class = "new-additions feature-box">
-				<a href ="products.html"><img src="img/Index/new-addition.jpg" alt = "A picure of the new Inside Out Funkos">
-				<h3 class = "label"> New</h3></a>
+				<a href ="products.html">
+				<div class="feature-box-pic">
+					<img src="img/Index/new-addition.jpg" alt = "A picure of the Big Hero 6 Funkos">
+					<h3 class = "label">Deals</h3></a>
+				</div>
 				<h3>Inside Out</h3>
 				<p class= "new-description-paragraph"> Stylized versions of Pixar’s designs from the film — are capturing our emotions</p>
 			</div>
 
 			<div class = "feature-box">
-				<a href = "products.html"><img src="img/Index/sales.jpg" alt = "A picure of the Big Hero 6 Funkos">
-				<h3 class = "label">Deals</h3></a>
+				<a href = "products.html">
+					<div class="feature-box-pic">
+						<img src="img/Index/sales.jpg" alt = "A picure of the Big Hero 6 Funkos">
+						<p class = "label">Sales</p></a>
+					</div>
 				<h3>Before It's Too Late</h3>
 				<p class= "new-description-paragraph"> Sales on the six characters that were all created for the Big Hero Six team </p>
 			</div>
