--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
 		<section class = "banner">
 			<img src="img/About/about-banner.png" alt="A banner image that shows a picture of the Funko mascot in the head office">
 			<div class = "banner-header">
-				<h1 class = "banner-title"> About Us</h1>
-				<h4 class = "banner-question"> Who Are We?</h4>
+				<h1> About Us</h1>
+				<h4> Who Are We?</h4>
 			</div>
 		</section>
 	
@@ -125,4 +125,12 @@
 	
 	</body>
 </html>
+
+<!-- This is just in here to avoid loading and weird button expansion when refreshing the page -->
+<script>
+    window.addEventListener('load', function load() {
+    window.removeEventListener('load', load, false);
+    document.body.classList.remove('load');
+  }, false);
+</script>
 
