--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
 		<link rel="stylesheet" href="css/grid.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/company.css">
+		
+
+
 
 	</head>
 
@@ -24,7 +27,7 @@
 			<nav>
 				<a class ="head-nav" href = "products.html"> Products </a>
 				<a class ="head-nav" href = "about.html"> About </a>
-				<a class ="head-nav" href = "contact.html"> Contact </a>
+				<a class ="head-nav current" href = "contact.html"> Contact </a>
 				<a class ="head-nav" href = "events.html"> Events </a> 
 			</nav>
 		</header>
@@ -32,8 +35,8 @@
 		<section class = "banner">
 			<img src="img/Contact/contact-banner.png" alt="contact banner image that shows a bunch of funko boxes">
 			<div class = "banner-header">
-				<h1> Contact</h1>
-				<h4> Where to Find?</h4>
+				<h1 class="banner-title"> Contact</h1>
+				<h4 class="banner-question"> Where to Find Us?</h4>
 			</div>
 		</section>
 
@@ -42,24 +45,32 @@
 			<!--MAP-->
 			<div class="contact">
 				<h2>Funko Pop!</h2>
-				<div class="grid-col-one">
+				<div class="grid-col-one break">		
+					
+						<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2606.7138011639545!2d-123.14061979999994!3d49.20598860000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548674eaf81abf35%3A0x80101531f3f8010e!2s123+Granville+St%2C+Vancouver%2C+BC+V6P!5e0!3m2!1sen!2sca!4v1435783101846"></iframe>
 
-					<img class="store-picture" src="img/Contact/store.png" alt="map">
+					<div class = "store-info">	
+					<div class ="store-details">
+					<p><a class = "bold-color">Location:</a>
+					<br>123 Granville Street, <br>Vancouver, BC <br>V6P 5A4</p>
+					</div>
+
+					<div class ="store-details">
+					<p><a class = "bold-color">Email</a> vancouver@funkopop.com</p>
 				</div>
+				<div class ="store-details">
+					<p>
+					<a class = "bold-color">Phone Number</a>
+					+1 604 123 4466</p>
+					</div>
+					</div>
+
+				</div>
+
 			
 				<!--STORE INFO-->
-
-				<div class = "store-info">	
-					<div class ="store-details">
-					<p><a class = "bold-color">Location:</a> Vancouver Convention Center
-					<br>1055 Canada Place, <br>Vancouver, BC <br>V6C 0C3</p>
-					</div>
-
-					<div class ="store-details">
-					<p><a class = "bold-color">General:</a> vancouver@funkopop.com</p><p>604 123 4466</p>
-					</div>
+			
 				</div>
-			</div>
 		</section>
 			
 <!--FORM/CONTACT-->
