Changes to the offer section. Added a div to help the responsive not alter the width
changed a p tag to a h3 tag

in mobile, the offers section have a small label on the picture instead of the hover state

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<a href = "products.html">
 					<div class="feature-box-pic">
 						<img src="img/Index/sales.jpg" alt = "A picure of the Big Hero 6 Funkos">
-						<p class = "label">Sales</p></a>
+						<h3 class = "label">Sales</h3></a>
 					</div>
 				<h3>Before It's Too Late</h3>
 				<p class= "new-description-paragraph"> Sales on the six characters that were all created for the Big Hero Six team </p>
@@ -106,8 +106,8 @@
 		</div>
 
 		<div class = "extras">
-			<p class = "extra-content"> Content </p>
-			<p class = "extra-content"> Style Guide </p>
+			<a href = "reference.html"><p class = "extra-content"> Content </p></a>
+			<a href ="#"<p class = "extra-content"> Style Guide </p></a>
 		</section>
 
 	</body>
