--- a/products.html
+++ b/products.html
@@ -7,22 +7,17 @@
 
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/product.css">
-		
-		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-		<script src="http://jqueryjs.googlecode.com/files/jquery-1.2.6.min.js" type="text/javascript"></script>
 
+		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+
+		<script src="js/jquery-2.1.4.min.js"></script>
+		<script src="js/mobile-menu.js"></script>
 
 <script>
-jQuery(document).ready(function($){
-
-	$('.multi-all').prepend('<div id="mobile-menu" class="nav-button">Categories</div>');
-
-	/* toggle nav */
-	$('#mobile-menu').click ( function() {
-		$('.product-nav').slideToggle();
-		$(this).toggleClass('active');
-	});
-});
+    window.addEventListener('load', function load() {
+    window.removeEventListener('load', load, false);
+    document.body.classList.remove('load');
+  }, false);
 </script>
 
 	</head>	
@@ -66,11 +61,11 @@ jQuery(document).ready(function($){
 				<a href = "#" class = "bc-home bc-current">Products</a>
 			</nav>
 			
-			<img class="category-banner" src = "img/Products/Funko/product-banner.png">
+			<img class="category-banner" src = "img/Products/Funko/product-banner.png" alt="product banner that shows multiple funkos">
 			<div class = "refine">
 				<div class ="drop-down">
 					<select>
-						<option class "dd-opt" value="volvo">Sort By</option>	
+						<option class="dd-opt" value="volvo">Sort By</option>	
 			  			<option value="name">Alphabetical</option>
 			  			<option>Newly Released</option>
 			  			<option>Price: Higher</option>
@@ -81,7 +76,7 @@ jQuery(document).ready(function($){
  				<form id="search-bar" method="post" action="#">
           		<input class="search comments" type="text" id="form-name" placeholder="Search">
           		</form>
-          		<a href="products.html"><img class = "search-button" src = "img/Products/search.png"></a>
+          		<a href="products.html"><img class = "search-button" src="img/Products/search.png" alt="search button"></a>
           		</div>
           	</div>
 
@@ -103,7 +98,7 @@ jQuery(document).ready(function($){
 	       	</div>
 
 			<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/disgust.png" alt"Disgust Funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/disgust.png" alt="Disgust Funko with box"></a>
 					<p class ="offer-label"> New!</p>
 					<p class ="item-name">Pop! Disney: Disgust</p>
 	       			<p class ="item-number">Item: #2503</p>
@@ -123,13 +118,13 @@ jQuery(document).ready(function($){
 	       	</div>
 
 	       	<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/batman.png" alt"Batman Funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/batman.png" alt="Batman Funko with box"></a>
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2503</p>
 	       	</div>
 
 			<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/spiderman.png" alt"spiderman funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/spiderman.png" alt="spiderman funko with box"></a>
 					<p class ="item-name">Pop! Heroes: Spiderman</p>
 	       			<p class ="item-number">Item: #2504</p>
 	       	</div>
@@ -148,20 +143,20 @@ jQuery(document).ready(function($){
 	       	</div>
 
 	       	<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/honeylemon.png" alt"HoneyLemon Funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/honeylemon.png" alt="HoneyLemon Funko with box"></a>
 					<p class ="offer-label sale"> Sale!</p>
 					<p class ="item-name">Pop! Disney: Honey Lemon</p>
 	       			<p class ="item-number">Item: #2206</p>
 	       	</div>
 
 			<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/fredflinstone.png" alt"Fred flinstone with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/fredflinstone.png" alt="Fred flinstone with box"></a>
 					<p class ="item-name">Pop! Animation: Fred Flinstone</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
 			<div class = "item-box item-box-last">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/stewie.png" alt"stewie funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/stewie.png" alt="stewie funko with box"></a>
 					<p class ="item-name">Pop! Animation: Stewie</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
@@ -172,26 +167,20 @@ jQuery(document).ready(function($){
 		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
 		  <div class = "email">
 		   <form id="comments" method="post" action="#">
-          <input class="comments" type="text" id="form-name" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
+          <input class="comments" type="text" id="form-email" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
           </form>
       </div>
 		
 		<div class ="footer-icons">
 			<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
-			<img src="img/Footer/twitter.png" height ="30" width="30"alt="Twitter logo">
+			<img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo">
 			<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
 		</div>
 
 		<div class = "extras">
 			<p class = "extra-content"> Content </p>
 			<p class = "extra-content"> Style Guide </p>
+		</div>
 		</section>
 	</body>
 </html>
-
-<script>
-    window.addEventListener('load', function load() {
-    window.removeEventListener('load', load, false);
-    document.body.classList.remove('load');
-  }, false);
-</script>
