--- a/view-item.html
+++ b/view-item.html
@@ -10,6 +10,9 @@
 		
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 
+		<script src="js/jquery-2.1.4.min.js"></script>
+		<script src="js/mobile-menu.js"></script>
+
 		<script src="http://jqueryjs.googlecode.com/files/jquery-1.2.6.min.js" type="text/javascript"></script>
 
 <script type="text/javascript">
@@ -56,7 +59,7 @@
 	 			<img src = "img/Products/Funko/joy.png" height ="100" width="100" alt"Joy funko with box">
 	 			<div class ="pop-up-header">
 	 			<img class = "checkmark" src = "img/Products/checkmark.png" alt"checkmark vector">
-	 			<h1>Item Added!</h1> 
+	 			<p class = "popup-added">Item Added!</h1> 
 	 			</div>   
 	 		</div>
 	 		<div class = "popup-nav">
@@ -79,19 +82,26 @@
 			<nav class = "item-breadcrumbs">
 				<a href ="index.html" class= "bc-home">Home</a> 
 				<p class = "bc-break"> // </p>
-				<a href = "products.html" class = "bc-products">Products</a>
+				<a href = "products.html" class = "bc-home">Products</a>
 				<p class = "bc-break"> // </p>
-				<a href = "funko-heroes.html" class = "bc-products">Pop! Disney</a><p class = "bc-break"> // </p>
+				<a href = "funko-heroes.html" class = "bc-home">Pop! Disney</a><p class = "bc-break"> // </p>
 				<a href = "view-item.html" class = "bc-current">Pop! Disney: Joy</a>
 			</nav>
 			<section class = "view-item">
+
+				<div class = "mobile-title">
+					<h3 class= "item-header">Pop! Disney: Joy</h3>
+         		 	<h5 class= "item-subheader">Item #2201</h5>
+         		 </div>
+
+
 				<div class = "item-picture">
 					<img  src = "img/Products/Funko/joy.png" alt "item-view of joy funko with box">
 				</div>
 				<div class ="item-heading">
-					<h3 class= "item-header">Pop! Disney: Joy</h3>
+					<h3 class= "item-header desktop">Pop! Disney: Joy</h3>
          		 	
-         		 	<h5 class= "item-subheader">Item #2201</h5>
+         		 	<h5 class= "item-subheader desktop">Item #2201</h5>
          		 	
          		 	<p class = "item-description">Meet Joy. She is one of the five emotions inside the mind of Riley Anderson. She is happy and joyful all the time, and is the leader or enthusiast of the group, hence her name. Joy's goal has always been to make sure Riley stays happy. She is lighthearted, optimistic and determined to find the fun in every situation. <p>
          		 	<h3 class= "item-price">$11.95</h3>
