This page is still under works, trying to fix the problem of the review image box going below the payment information
moving the hading to above everything

--- a/purchase-item.html
+++ b/purchase-item.html
@@ -7,10 +7,10 @@
 
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/product.css">
-		
-<!-- script Makes the input clear, but "placeholder" has to be replaced with "value" -->
-		<script type="text/javascript" src="js/util-functions.js"></script>
-		<script type="text/javascript" src="js/clear-default-text.js"></script>
+	
+
+		<script src="js/jquery-2.1.4.min.js"></script>
+		<script src="js/mobile-menu.js"></script>
 		
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 
@@ -28,9 +28,35 @@
 			</nav>
 		</header>
 
+<section class ="review">
+			<div class= "cart-all">
+				<div class= "cart">
+					<div class="item-wrapper">
+						<img class="review-item" src = "img/Products/Funko/joy.png" alt= "review item of joy funko with box">
+					</div>
+
+					<div class="cart-details">
+						<div class="cart-item">	
+							<p class="cart-label">Name</p>
+							<p>Pop! Disney: Joy</p>
+						</div>
+						<div class="cart-item cart-number">
+							<p class="cart-label">Qty</p>
+							<p>1</p>
+						</div>
+						<div class="cart-item cart-number">
+							<p class="cart-label">Price</p>
+							<p>11.95</p>
+						</div>
+					</div>
+				</div>		
+			</div>
+		</section>
+		
+
 		<section class="information">
+			<h3 class= "information-header item-header">Checkout</h3>
 			<div class ="information-input">
-				<h3 class= "information-header item-header">Checkout</h3>
 			
 				<div class = "checkout-information">
 					<div = class="shipping">
@@ -129,30 +155,7 @@
 					</div>
 				</div>
 		</section>
-	<section class ="review">
-			<div class= "cart-all">
-				<div class= "cart">
-					<div class="item-wrapper">
-						<img class="review-item" src = "img/Products/Funko/joy.png" alt= "review item of joy funko with box">
-					</div>
-
-					<div class="cart-details">
-						<div class="cart-item">	
-							<p class="cart-label">Name</p>
-							<p>Pop! Disney: Joy</p>
-						</div>
-						<div class="cart-item cart-number">
-							<p class="cart-label">Qty</p>
-							<p>1</p>
-						</div>
-						<div class="cart-item cart-number">
-							<p class="cart-label">Price</p>
-							<p>11.95</p>
-						</div>
-					</div>
-				</div>		
-			</div>
-		</section>
+	
 	</body>
 	</html>
 
