--- a/funko-heroes.html
+++ b/funko-heroes.html
@@ -9,6 +9,9 @@
 		<link rel="stylesheet" href="css/product.css">
 		
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+		<script src="js/jquery-2.1.4.min.js"></script>
+		<script src="js/mobile-menu.js"></script>
+		
 	</head>	
 
 	<body>
