Banner fixes on these html pages.
Instead of having the banner shrink, it now crops, keeping the same height

--- a/contact.html
+++ b/contact.html
@@ -105,11 +105,11 @@
 		<section class = "footer">
 			<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
 			<div class = "email">
-				<form class="comments" method="post" action="#">
-				<input class="comments" type="text" id="form-name" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
-				</form>
+				<form id="comments" method="post" action="#">
+	          	<input class="comments" type="text" id="form-name" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
+	          </form>
 	      	</div>
-			
+		
 			<div class ="footer-icons">
 				<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
 				<img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo">
@@ -117,8 +117,8 @@
 			</div>
 
 			<div class = "extras">
-				<p class = "extra-content"> Content </p>
-				<p class = "extra-content"> Style Guide </p>
+				<a href = "reference.html"><p class = "extra-content"> Content </p></a>
+				<a href ="styleguide.html"> <p class = "extra-content"> Style Guide </p></a>
 			</div>
 		</section>
 <!--end of footer-->
