--- a/events1.html
+++ b/events1.html
@@ -92,8 +92,8 @@
 		</div>
 
 		<div class = "extras">
-			<p class = "extra-content"> Content </p>
-			<p class = "extra-content"> Style Guide </p>
+			<a href = "reference.html"><p class = "extra-content"> Content </p></a>
+			<a href ="styleguide.html"> <p class = "extra-content"> Style Guide </p></a>
 		</div>
 	</section>
 
