--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 		<div class = "extras">
 			<a href = "reference.html"><p class = "extra-content"> Content </p></a>
-			<a href ="#"> <p class = "extra-content"> Style Guide </p></a>
+			<a href ="styleguide.html"> <p class = "extra-content"> Style Guide </p></a>
 		</div>
 		</section>
 
