changes to the footer adds in the link to the references and style guide

--- a/purchase-item.html
+++ b/purchase-item.html
@@ -181,8 +181,9 @@
 		</div>
 
 		<div class = "extras">
-			<p class = "extra-content"> Content </p>
-			<p class = "extra-content"> Style Guide </p></div>
+			<a href = "reference.html"><p class = "extra-content"> Content </p></a>
+			<a href ="styleguide.html"> <p class = "extra-content"> Style Guide </p></a>
+		</div>
 		</section>
 	
 	</body>
