--- a/funko-heroes.html
+++ b/funko-heroes.html
@@ -11,6 +11,13 @@
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/mobile-menu.js"></script>
+
+		<script>
+		    window.addEventListener('load', function load() {
+		    window.removeEventListener('load', load, false);
+		    document.body.classList.remove('load');
+		  }, false);
+		</script>
 		
 	</head>	
 
@@ -50,12 +57,12 @@
 				<p class = "bc-break"> // </p>
 				<a href = "#" class = "bc-products bc-current">Products</a>
 			</nav>
-			<img class="category-banner" src = "img/Products/Funko/hero-product-banner.png" alt"Funko banner with some of the pop hero figures">
+			<img class="category-banner" src = "img/Products/Funko/hero-product-banner.png" alt="Funko banner with some of the pop hero figures">
 			<p class = "over-banner-label"> Pop! Heroes</p>
 			<div class = "refine">
 				<div class ="drop-down">
 					<select>
-						<option class "dd-opt" value="volvo">Sort By</option>	
+						<option class="dd-opt" value="volvo">Sort By</option>	
 			  			<option value="name">Alphabetical</option>
 			  			<option>Newly Released</option>
 			  			<option>Price: Higher</option>
@@ -66,7 +73,7 @@
  				<form id="search-bar" method="post" action="#">
           		<input class="search comments" type="text" id="form-name" placeholder="Search">
           		</form>
-          		<a href="#"><img class = "search-button" src = "img/search.png"></a>
+          		<a href="#"><img class = "search-button" src = "img/Products/search.png" alt="search button"></a>
           		</div>
           	</div>
 
@@ -88,7 +95,7 @@
 	       	</div>
 
 			<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/disgust.png" alt"Disgust Funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/disgust.png" alt="Disgust Funko with box"></a>
 					<p class ="offer-label"> New!</p>
 					<p class ="item-name">Pop! Disney: Disgust</p>
 	       			<p class ="item-number">Item: #2503</p>
@@ -108,13 +115,13 @@
 	       	</div>
 
 	       	<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/batman.png" alt"Batman Funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/batman.png" alt="Batman Funko with box"></a>
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2503</p>
 	       	</div>
 
 			<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/spiderman.png" alt"spiderman funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/spiderman.png" alt="spiderman funko with box"></a>
 					<p class ="item-name">Pop! Heroes: Spiderman</p>
 	       			<p class ="item-number">Item: #2504</p>
 	       	</div>
@@ -133,32 +140,44 @@
 	       	</div>
 
 	       	<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/honeylemon.png" alt"HoneyLemon Funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/honeylemon.png" alt="HoneyLemon Funko with box"></a>
 					<p class ="offer-label sale"> Sale!</p>
 					<p class ="item-name">Pop! Disney: Honey Lemon</p>
 	       			<p class ="item-number">Item: #2206</p>
 	       	</div>
 
 			<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/fredflinstone.png" alt"Fred flinstone with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/fredflinstone.png" alt="Fred flinstone with box"></a>
 					<p class ="item-name">Pop! Animation: Fred Flinstone</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
 			<div class = "item-box item-box-last">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/stewie.png" alt"stewie funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/stewie.png" alt="stewie funko with box"></a>
 					<p class ="item-name">Pop! Animation: Stewie</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 		</section>
+	</div>
+
+		<section class = "footer">
+		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
+		  <div class = "email">
+		   <form id="comments" method="post" action="#">
+          <input class="comments" type="text" id="form-email" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
+          </form>
+      </div>
+		
+		<div class ="footer-icons">
+			<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
+			<img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo">
+			<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
+		</div>
+
+		<div class = "extras">
+			<a href = "reference.html"><p class = "extra-content"> Content </p></a>
+			<a href ="styleguide.html"> <p class = "extra-content"> Style Guide </p></a>
+		</div>
+		</section>	
 	</body>
 </html>
-
-
-
-<script>
-    window.addEventListener('load', function load() {
-    window.removeEventListener('load', load, false);
-    document.body.classList.remove('load');
-  }, false);
-</script>
