Navigation buttons were changed to make it flow more smoothly when the wondow shrinks

--- a/styleguide.html
+++ b/styleguide.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Pattern Library</title>
+    <title>Funko! Pop- Style Guide</title>
 
     <link href="css/style-guide.css" rel="stylesheet">
     
