--- a/events1.html
+++ b/events1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset= "utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Funko! Pop Event</title>
+		<title>Funko! Pop - Van Fan Expo</title>
 
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 
@@ -13,13 +13,7 @@
 
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/mobile-menu.js"></script>
-
-		<script>
-    window.addEventListener('load', function load() {
-    window.removeEventListener('load', load, false);
-    document.body.classList.remove('load');
-  }, false);
-</script>
+		<script src="js/load.js"></script>
 
 	</head>
 
@@ -34,11 +28,14 @@
 				<a class ="head-nav" href = "about.html"> About </a>
 				<a class ="head-nav" href = "contact.html"> Contact </a>
 				<a class ="head-nav" href = "events.html"> Events </a> 
+				<div class = cart-img>
+					<a  href = "purchase-item.html"><img src="img/Index/cart.png" width="25" height ="25" alt="picture of a cart"></a>
+				</div> 
 			</nav>
 		</header>
 
 		<section class = "banner">
-			<img src="img/Events/events1-banner.png" alt="banner that shows a Funko display at an event">
+			<img src="img/Events/events1-banner.jpg" alt="banner that shows a Funko display at an event">
 			<div class = "banner-header">
 				<h1> Van Fan Expo</h1>
 				<h4> What is that?</h4>
