--- a/reference.html
+++ b/reference.html
@@ -15,15 +15,7 @@
 
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/mobile-menu.js"></script>
-
-		<script>
-			window.addEventListener('load', function load() {
-			window.removeEventListener('load', load, false);
-			document.body.classList.remove('load');
-			}, false);
-		</script>
-
-
+		<script src="js/load.js"></script>
 	</head>
 
 
@@ -38,6 +30,9 @@
 				<a class ="head-nav" href = "about.html"> About </a>
 				<a class ="head-nav" href = "contact.html"> Contact </a>
 				<a class ="head-nav" href = "events.html"> Events </a> 
+				<div class = cart-img>
+					<a  href = "purchase-item.html"><img src="img/Index/cart.png" width="25" height ="25" alt="picture of a cart"></a>
+				</div> 
 			</nav>
 		</header>
 
