--- a/styleguide.html
+++ b/styleguide.html
@@ -14,15 +14,8 @@
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/sg-mobile-menu.js"></script>
     <script src="js/scrolling.js"></script>
-
-    <!-- This is just in here to avoid loading and weird button expansion when refreshing the page -->
-    <script>
-        window.addEventListener('load', function load() {
-        window.removeEventListener('load', load, false);
-        document.body.classList.remove('load');
-      }, false);
-    </script>
-
+    <script src="js/load.js"></script>
+    
   </head>
 
   <body>
