--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 		<meta charset= "utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
-		<title>Funko! Pop </title>
+		<title>Funko! Pop - About </title>
 
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 
@@ -15,16 +15,7 @@
 
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/mobile-menu.js"></script>
-
-		
-		<!-- This is just in here to avoid loading and weird button expansion when refreshing the page -->
-		<script type="text/javascript">
-		    window.addEventListener('load', function load() {
-		    window.removeEventListener('load', load, false);
-		    document.body.classList.remove('load');
-		  }, false);
-		</script>
-
+		<script src="js/load.js"></script>
 	</head>
 	
 	<body>
@@ -34,14 +25,17 @@
 			</div>
 			<nav>
 				<a class ="head-nav" href = "products.html"> Products </a>
-				<a class ="head-nav current" href = "about.html"> About </a>
+				<a class ="head-nav" href = "about.html"> About </a>
 				<a class ="head-nav" href = "contact.html"> Contact </a>
 				<a class ="head-nav" href = "events.html"> Events </a> 
+				<div class = cart-img>
+					<a  href = "purchase-item.html"><img src="img/Index/cart.png" width="25" height ="25" alt="picture of a cart"></a>
+				</div> 
 			</nav>
 		</header>
 
 		<section class = "banner">
-			<img src="img/About/about-banner.png" alt="A banner image that shows a picture of the Funko mascot in the head office">
+			<img src="img/About/about-banner.jpg" alt="A banner image that shows a picture of the Funko mascot in the head office">
 			<div class = "banner-header">
 				<h1> About Us</h1>
 				<h4> Who Are We?</h4>
