--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
-		<title>Funko! Pop</title>
+		<title>Funko! Pop- Home</title>
 
 		<link rel="stylesheet" href="css/main.css">
 		
@@ -13,15 +13,7 @@
 
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/mobile-menu.js"></script>
-
-			<!-- This is just in here to avoid loading and weird button expansion when refreshing the page -->
-		<script>
-		    window.addEventListener('load', function load() {
-		    window.removeEventListener('load', load, false);
-		    document.body.classList.remove('load');
-		  }, false);
-		</script>
-
+		<script src="js/load.js"></script>
 	</head>
 	
 	<body>
@@ -35,6 +27,9 @@
 				<a class ="head-nav" href = "about.html"> About </a>
 				<a class ="head-nav" href = "contact.html"> Contact </a>
 				<a class ="head-nav" href = "events.html"> Events </a> 
+				<div class = cart-img>
+					<a  href = "purchase-item.html"><img src="img/Index/cart.png" width="25" height ="25" alt="picture of a cart"></a>
+				</div> 
 			</nav>
 		</header>
 
